[gd_scene load_steps=11 format=3 uid="uid://cicpbily2jo3r"]

[ext_resource type="Script" uid="uid://bttn54ws25wlo" path="res://script/base/BaseHero.gd" id="1_1kuae"]
[ext_resource type="Script" uid="uid://bhoea7wr3asos" path="res://script/base/Hurtbox.gd" id="1_1nxcr"]
[ext_resource type="Script" uid="uid://rd8oj5v71skj" path="res://script/base/Hitbox.gd" id="2_1kuae"]
[ext_resource type="Script" uid="uid://dlt8ht6ajqcf7" path="res://script/StateMachine/StateMachine.gd" id="3_raqfr"]
[ext_resource type="Script" uid="uid://1lxgxuu7wi2j" path="res://script/StateMachine/BaseHeroState/IdleState.gd" id="5_dq6o8"]
[ext_resource type="Script" uid="uid://bmowhl8g0xhch" path="res://script/StateMachine/BaseHeroState/RunState.gd" id="6_cjteo"]
[ext_resource type="Script" uid="uid://p61fh76epprt" path="res://script/StateMachine/BaseHeroState/Jump1State.gd" id="7_7e20b"]
[ext_resource type="Script" uid="uid://b4ebauugxpqn2" path="res://script/StateMachine/BaseHeroState/Jump2State.gd" id="8_rw8n7"]
[ext_resource type="Script" uid="uid://bgv884n380q1e" path="res://script/StateMachine/BaseHeroState/FallState.gd" id="9_nsjig"]
[ext_resource type="Script" uid="uid://dotdqkqa5l28x" path="res://script/StateMachine/BaseHeroState/AttackState.gd" id="10_ty4af"]

[node name="BaseHero" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_1kuae")

[node name="Graphics" type="Node2D" parent="."]

[node name="Role" type="Sprite2D" parent="Graphics"]
scale = Vector2(-1, 1)

[node name="Equipment" type="Sprite2D" parent="Graphics"]
scale = Vector2(-1, 1)

[node name="SpecialEffect" type="Sprite2D" parent="Graphics"]
scale = Vector2(-1, 1)

[node name="Hurtbox" type="Area2D" parent="Graphics"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_1nxcr")
metadata/_custom_type_script = "uid://bhoea7wr3asos"

[node name="HurtShape" type="CollisionShape2D" parent="Graphics/Hurtbox"]

[node name="HitBox" type="Node2D" parent="Graphics"]

[node name="Attack" type="Area2D" parent="Graphics/HitBox"]
collision_layer = 0
collision_mask = 16
script = ExtResource("2_1kuae")
metadata/_custom_type_script = "uid://rd8oj5v71skj"

[node name="AtkShape1" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="AtkShape2" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="AtkShape3" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="AtkShape4" type="CollisionShape2D" parent="Graphics/HitBox/Attack"]

[node name="BodyShape" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_raqfr")
metadata/_custom_type_script = "uid://dlt8ht6ajqcf7"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_dq6o8")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("6_cjteo")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Jump1" type="Node" parent="StateMachine"]
script = ExtResource("7_7e20b")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Jump2" type="Node" parent="StateMachine"]
script = ExtResource("8_rw8n7")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("9_nsjig")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("10_ty4af")
metadata/_custom_type_script = "uid://cud07j8c2hhxy"

[node name="JumpBufferTimer" type="Timer" parent="."]
